--- a/packages/storybook-html/stories/components/blockquote/blockquote.mdx
+++ b/packages/storybook-html/stories/components/blockquote/blockquote.mdx
@@ -1,16 +1,16 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as BlockquoteStories from './blockquote.stories';
+
+<Meta of={BlockquoteStories} />
 
 # Blockquote
 
 <StatusBadge.Stable />
+
 <StatusBadge.StableDoc />
 
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
-  target="_blank"
->
+<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">
   Check for open issues
 </a>
 
@@ -23,6 +23,8 @@ The blockquote component is used for quoting a passage of text or speech, the au
 Displays the blockquote text, author, and source in purple text for use on light backgrounds such as white or light-grey.
 
 <Canvas>
+  {/* <Story height={170} id="components-blockquote--blockquote" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story height={170} id="components-blockquote--blockquote" />
 </Canvas>
 
@@ -52,6 +54,8 @@ Displays the blockquote text, author, and source in purple text for use on light
 Changes the colour of the blockquote text to white so it can be used on darker backgrounds such as UQ purple.
 
 <Canvas>
+  {/* <Story height={170} id="components-blockquote--blockquote-light" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story height={170} id="components-blockquote--blockquote-light" />
 </Canvas>
 
@@ -76,9 +80,9 @@ Changes the colour of the blockquote text to white so it can be used on darker b
 
 ## How and when to use
 
-- The quoted content is contained in the `blockquote` element. The author and source are placed outside that element so they do not become a part of the quoted content.
-- If referencing the source of the quote, the source title should be placed in a `cite` element. This element should only contain the title of the source, not the author as the author is not considered the source according to the specifcations of the `cite` element.
-- The use of the blockquote element indicates the text is a quotation from another source. It should not be used for visual styling of other content.
+*   The quoted content is contained in the `blockquote` element. The author and source are placed outside that element so they do not become a part of the quoted content.
+*   If referencing the source of the quote, the source title should be placed in a `cite` element. This element should only contain the title of the source, not the author as the author is not considered the source according to the specifcations of the `cite` element.
+*   The use of the blockquote element indicates the text is a quotation from another source. It should not be used for visual styling of other content.
 
 ## Accessibility
 
