--- a/packages/storybook-html/stories/components/core/colour-base.mdx
+++ b/packages/storybook-html/stories/components/core/colour-base.mdx
@@ -24,53 +24,68 @@ These are the core brand colours for the University of Queensland. Refer to the 
       <th className="uqds-table__heading">HEX</th>
       <th className="uqds-table__heading">Usage</th>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--purple"></div>
+        <div className="uqds-colour__palette uqds-colour--purple" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ purple
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-purple</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #51247a
+        \#51247a
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Purple is UQ’s primary identifying colour
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--white"></div>
+        <div className="uqds-colour__palette uqds-colour--white" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ white
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-white</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #ffffff
+        \#ffffff
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Primary UQ Colour
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--black"></div>
+        <div className="uqds-colour__palette uqds-colour--black" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ black
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-black</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #000000
+        \#000000
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Primary UQ Colour
       </td>
@@ -91,138 +106,178 @@ These secondary colours should always play a supporting role to our primary colo
       <th className="uqds-table__heading">HEX</th>
       <th className="uqds-table__heading">Usage</th>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--purple-light"></div>
+        <div className="uqds-colour__palette uqds-colour--purple-light" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ purple light
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-purple-light</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #962a8b
+        \#962a8b
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Secondary UQ Colour
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--gold"></div>
+        <div className="uqds-colour__palette uqds-colour--gold" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ gold
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-gold</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #bb9d65
+        \#bb9d65
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Secondary UQ Colour
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--red"></div>
+        <div className="uqds-colour__palette uqds-colour--red" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ red
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-red</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #e62645
+        \#e62645
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Secondary UQ Colour
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--orange"></div>
+        <div className="uqds-colour__palette uqds-colour--orange" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ orange
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-orange</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #eb602e
+        \#eb602e
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Secondary UQ Colour
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--yellow"></div>
+        <div className="uqds-colour__palette uqds-colour--yellow" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ yellow
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-yellow</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #fbb800
+        \#fbb800
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Secondary UQ Colour
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--blue"></div>
+        <div className="uqds-colour__palette uqds-colour--blue" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ blue
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-blue</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #4085c6
+        \#4085c6
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Secondary UQ Colour
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--aqua"></div>
+        <div className="uqds-colour__palette uqds-colour--aqua" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ aqua
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-aqua</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #00a2c7
+        \#00a2c7
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Secondary UQ Colour
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--green"></div>
+        <div className="uqds-colour__palette uqds-colour--green" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ green
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-green</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #2ea836
+        \#2ea836
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Secondary UQ Colour
       </td>
@@ -243,36 +298,46 @@ Neutral tones can be used as a background colour.
       <th className="uqds-table__heading">HEX</th>
       <th className="uqds-table__heading">Usage</th>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--neutral"></div>
+        <div className="uqds-colour__palette uqds-colour--neutral" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ neutral
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-neutral</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #d7d1cc
+        \#d7d1cc
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Neutral tones
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-colour--darkgrey"></div>
+        <div className="uqds-colour__palette uqds-colour--darkgrey" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         UQ dark grey
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$uq-darkgrey</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #999490
+        \#999490
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Neutral tones
       </td>
@@ -293,19 +358,24 @@ Neutral tones can be used as a background colour.
       <th className="uqds-table__heading">HEX</th>
       <th className="uqds-table__heading">Usage</th>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item">
-        <div className="uqds-colour__palette uqds-link-color"></div>
+        <div className="uqds-colour__palette uqds-link-color" />
       </td>
+
       <td className="uqds-table__item" data-title="Name:">
         Link
       </td>
+
       <td className="uqds-table__item" data-title="Variable:">
         <code>$link</code>
       </td>
+
       <td className="uqds-table__item" data-title="HEX:">
-        #1e72c6
+        \#1e72c6
       </td>
+
       <td className="uqds-table__item" data-title="Usage:">
         Default link colour
       </td>
