--- a/packages/storybook-html/stories/components/grid-menu/grid-menu.mdx
+++ b/packages/storybook-html/stories/components/grid-menu/grid-menu.mdx
@@ -1,9 +1,13 @@
 import { Meta, Story } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as GridMenuStories from './grid-menu.stories';
+
+<Meta of={GridMenuStories} />
 
 # Grid menu
 
 <StatusBadge.Review />
+
 <StatusBadge.DraftDoc />
 
 ## Overview
@@ -14,6 +18,8 @@ By default it is displayed as a 3 column layout and changes on different respons
 The height of the grid menu items is by default equalised on its row.
 
 ## Default example
+
+{/* <Story id="components-grid-menu--grid-menu-default" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story id="components-grid-menu--grid-menu-default" />
 
@@ -45,6 +51,8 @@ The height of the grid menu items is by default equalised on its row.
 
 ### With description
 
+{/* <Story id="components-grid-menu--grid-menu-description" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story id="components-grid-menu--grid-menu-description" />
 
 ```html
@@ -67,6 +75,8 @@ The height of the grid menu items is by default equalised on its row.
 ```
 
 ### With dark text
+
+{/* <Story id="components-grid-menu--grid-menu-dark-text" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story id="components-grid-menu--grid-menu-dark-text" />
 
@@ -91,6 +101,8 @@ The height of the grid menu items is by default equalised on its row.
 
 ### With icons
 
+{/* <Story id="components-grid-menu--grid-menu-icons" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story id="components-grid-menu--grid-menu-icons" />
 
 ```html
@@ -109,6 +121,8 @@ The height of the grid menu items is by default equalised on its row.
 
 ### 2 column
 
+{/* <Story id="components-grid-menu--grid-menu-2-column" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story id="components-grid-menu--grid-menu-2-column" />
 
 ```html
@@ -121,6 +135,8 @@ The height of the grid menu items is by default equalised on its row.
 ```
 
 ### 4 column
+
+{/* <Story id="components-grid-menu--grid-menu-4-column" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story id="components-grid-menu--grid-menu-4-column" />
 
@@ -136,5 +152,7 @@ The height of the grid menu items is by default equalised on its row.
 ## Example of Grid menu items equalising height
 
 This is an example of Grid menu items equalising height by default in its row
+
+{/* <Story id="components-grid-menu--grid-menu-equalised-height" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story id="components-grid-menu--grid-menu-equalised-height" />
