--- a/packages/storybook-html/stories/components/loading-spinner/loading-spinner.mdx
+++ b/packages/storybook-html/stories/components/loading-spinner/loading-spinner.mdx
@@ -1,16 +1,16 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as LoadingSpinnerStories from './loading-spinner.stories';
+
+<Meta of={LoadingSpinnerStories} />
 
 # Loading spinner
 
 <StatusBadge.Stable />
+
 <StatusBadge.StableDoc />
 
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
-  target="_blank"
->
+<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">
   Check for open issues
 </a>
 
@@ -23,6 +23,8 @@ The loading spinner component is a progress indicator used to provide feedback t
 The default component is UQ purple for use on light backgrounds such as white or light-grey.
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-loading-spinner--loading-spinner" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-loading-spinner--loading-spinner" />
 </Canvas>
 
@@ -41,6 +43,8 @@ The variants can be used in isolation or combined. For example if you would like
 Changes the colour of the component to white so it can be used on darker backgrounds such as UQ purple.
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-loading-spinner--loading-spinner-light" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-loading-spinner--loading-spinner-light" />
 </Canvas>
 
@@ -59,6 +63,8 @@ Changes the colour of the component to white so it can be used on darker backgro
 Reduces the component to half the size of the default.
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-loading-spinner--loading-spinner-small" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-loading-spinner--loading-spinner-small" />
 </Canvas>
 
