--- a/packages/storybook-html/stories/components/previous-next/previous-next.mdx
+++ b/packages/storybook-html/stories/components/previous-next/previous-next.mdx
@@ -1,24 +1,24 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as PreviousNextStories from './previous-next.stories';
+
+<Meta of={PreviousNextStories} />
 
 # Previous next
 
 <StatusBadge.Review />
+
 <StatusBadge.ReviewDoc />
 
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
-  target="_blank"
->
+<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">
   Check for open issues
 </a>
 
 ## Overview
 
-- The Previous-next component is also a form of pagination.
-- It provides previous and next buttons (links) to navigate between pages or between tab contents on the same page.
-- They are aligned to the sides of the page or in some instances to the sides of the tab contents.
+*   The Previous-next component is also a form of pagination.
+*   It provides previous and next buttons (links) to navigate between pages or between tab contents on the same page.
+*   They are aligned to the sides of the page or in some instances to the sides of the tab contents.
 
 ## Default example
 
@@ -27,6 +27,8 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 An instance when only the next button is visible
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-previous-next--previous-next-initial" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-previous-next--previous-next-initial" />
 </Canvas>
 
@@ -52,6 +54,8 @@ An instance when only the next button is visible
 An instance when both the previous and next buttons are visible
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-previous-next--previous-next-middle" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-previous-next--previous-next-middle" />
 </Canvas>
 
@@ -78,6 +82,8 @@ An instance when both the previous and next buttons are visible
 An instance when only the previous button is visible
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-previous-next--previous-next-final" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-previous-next--previous-next-final" />
 </Canvas>
 
@@ -100,12 +106,12 @@ An instance when only the previous button is visible
 
 ## How and when to use
 
-- The Previous-next component can be used with or without the progression component.
+*   The Previous-next component can be used with or without the progression component.
 
 ### Breakpoints
 
-- The previous and next buttons collapses at viewport widths less than 640px.
+*   The previous and next buttons collapses at viewport widths less than 640px.
 
 ## Related
 
-- Progression component could be used in conjunction with the Previous-next component.
+*   Progression component could be used in conjunction with the Previous-next component.
