--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-4-search-combo.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-4-search-combo.mdx
@@ -1,20 +1,25 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as UqMaps4SearchComboStories from './uq-maps-4-search-combo.stories';
+
+<Meta of={UqMaps4SearchComboStories} />
 
 # UQ Maps: search combo menu
 
 <StatusBadge.Development />
 
-Enables the user to search for _and_ browse points of interest and categories.
-By design, the first child of this component root is the _search field_.
+Enables the user to search for *and* browse points of interest and categories.
+By design, the first child of this component root is the *search field*.
 
 ## 4A. Initial state
 
-Visually, it looks identical to a _search field_ by itself.
+Visually, it looks identical to a *search field* by itself.
 
 ### Basic usage
 
 <Canvas withSource="open" withToolbar>
+  {/* <Story height={100} id="deliverables-uq-maps-4-search-combo-menu--initial" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story height={100} id="deliverables-uq-maps-4-search-combo-menu--initial" />
 </Canvas>
 
@@ -32,6 +37,8 @@ text. The following example shows an alphabetical list of categories. However,
 we should show some data-driven POI's/categories instead.
 
 <Canvas withSource="open" withToolbar>
+  {/* <Story height={800} id="deliverables-uq-maps-4-search-combo-menu--focused" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story height={800} id="deliverables-uq-maps-4-search-combo-menu--focused" />
 </Canvas>
 
@@ -40,10 +47,9 @@ we should show some data-driven POI's/categories instead.
 ### Basic usage
 
 <Canvas withSource="open" withToolbar>
-  <Story
-    height={800}
-    id="deliverables-uq-maps-4-search-combo-menu--searching"
-  />
+  {/* <Story height={800} id="deliverables-uq-maps-4-search-combo-menu--searching" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
+  <Story height={800} id="deliverables-uq-maps-4-search-combo-menu--searching" />
 </Canvas>
 
 ## 4D. With search value but no results
@@ -51,10 +57,9 @@ we should show some data-driven POI's/categories instead.
 ### Basic usage
 
 <Canvas withSource="open" withToolbar>
-  <Story
-    height={155}
-    id="deliverables-uq-maps-4-search-combo-menu--searching-no-results"
-  />
+  {/* <Story height={155} id="deliverables-uq-maps-4-search-combo-menu--searching-no-results" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
+  <Story height={155} id="deliverables-uq-maps-4-search-combo-menu--searching-no-results" />
 </Canvas>
 
 ## 4E. With search value but with search error
@@ -62,10 +67,9 @@ we should show some data-driven POI's/categories instead.
 ### Basic usage
 
 <Canvas withSource="open" withToolbar>
-  <Story
-    height={176}
-    id="deliverables-uq-maps-4-search-combo-menu--searching-error"
-  />
+  {/* <Story height={176} id="deliverables-uq-maps-4-search-combo-menu--searching-error" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
+  <Story height={176} id="deliverables-uq-maps-4-search-combo-menu--searching-error" />
 </Canvas>
 
 ## 4F. With search value AND category item opened
@@ -77,10 +81,9 @@ list items.
 ### Basic usage
 
 <Canvas withSource="open" withToolbar>
-  <Story
-    height={800}
-    id="deliverables-uq-maps-4-search-combo-menu--searching-in-category"
-  />
+  {/* <Story height={800} id="deliverables-uq-maps-4-search-combo-menu--searching-in-category" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
+  <Story height={800} id="deliverables-uq-maps-4-search-combo-menu--searching-in-category" />
 </Canvas>
 
 ## JavaScript UX enhancements
@@ -90,9 +93,11 @@ list items.
 <div class="alert alert--warning" role="alert">
   <div class="alert__message">
     Note:
+
     <strong>
       there's currently no reliable way to make the search field "sticky"
     </strong>
+
     (remain at the top even when scrolling)—with the first search result
     initially positioned relative to the search field's height—
     <strong>using CSS and HTML alone</strong>. Implement a JavaScript solution to
