--- a/packages/storybook-html/stories/components/body/body-elements.mdx
+++ b/packages/storybook-html/stories/components/body/body-elements.mdx
@@ -1,50 +1,68 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as BodyElementsStories from './body-elements.stories';
+
+<Meta of={BodyElementsStories} />
 
 # Body elements
 
 <StatusBadge.Review />
+
 <StatusBadge.DraftDoc />
 
 ## Title
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-body-elements--title" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-body-elements--title" />
 </Canvas>
 
 ## Header
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-body-elements--header" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-body-elements--header" />
 </Canvas>
 
 ## Text block
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-body-elements--text-block" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-body-elements--text-block" />
 </Canvas>
 
 ## Unordered list (`<ul>`)
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-body-elements--unordered-list" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-body-elements--unordered-list" />
 </Canvas>
 
 ## Ordered list (`<ol>`)
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-body-elements--ordered-list" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-body-elements--ordered-list" />
 </Canvas>
 
 ## Definition list (`<dl>`)
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-body-elements--definition-list" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-body-elements--definition-list" />
 </Canvas>
 
 ## Horizontal rule (`<hr/>`)
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-body-elements--horizontal-rule" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-body-elements--horizontal-rule" />
 </Canvas>
 
