--- a/packages/storybook-html/stories/components/body/body-utilities.mdx
+++ b/packages/storybook-html/stories/components/body/body-utilities.mdx
@@ -1,32 +1,48 @@
 import { Meta, Story} from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as BodyUtilitiesStories from './body-utilities.stories';
+
+<Meta of={BodyUtilitiesStories} />
 
 # Body utility classes
 
 <StatusBadge.Review />
+
 <StatusBadge.DraftDoc />
 
 ## Text colour
+
+{/* <Story id="components-body-utilities--text-color-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story id="components-body-utilities--text-color-utils" />
 
 ## Text size
 
+{/* <Story id="components-body-utilities--text-size-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story id="components-body-utilities--text-size-utils" />
 
 ## Text weight
+
+{/* <Story id="components-body-utilities--text-weight-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story id="components-body-utilities--text-weight-utils" />
 
 ## Text alignment
 
+{/* <Story id="components-body-utilities--text-align-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story id="components-body-utilities--text-align-utils" />
 
 ## Text prettiers
 
+{/* <Story id="components-body-utilities--text-pretty-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story id="components-body-utilities--text-pretty-utils" />
 
 ## Background colour
+
+{/* <Story id="components-body-utilities--background-colour-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story id="components-body-utilities--background-colour-utils" />
 
@@ -48,14 +64,16 @@ Coming soon
 
 ## Visibility
 
+{/* <Story id="components-body-utilities--visibility-utils" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story id="components-body-utilities--visibility-utils" />
 
-  <br />
+<br />
 
 ### Print visibility
 
-- `.show-for-print` - Add classname to element to show when printing
-- `.hide-for-print` - Add classname to element to hide when printing
+*   `.show-for-print` - Add classname to element to show when printing
+*   `.hide-for-print` - Add classname to element to hide when printing
 
 ## Embedded media
 
