--- a/packages/storybook-html/stories/components/card/card.mdx
+++ b/packages/storybook-html/stories/components/card/card.mdx
@@ -1,16 +1,16 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as CardStories from './card.stories';
+
+<Meta of={CardStories} />
 
 # Card
 
 <StatusBadge.Review />
+
 <StatusBadge.ReviewDoc />
 
-<a
-  href="https://github.com/uq-its-ss/design-system/issues"
-  class="uq-button uq-button--text"
-  target="_blank"
->
+<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">
   Check for open issues
 </a>
 
@@ -26,6 +26,8 @@ The height of the cards in a group all equalises by default.
 ### Default card
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--default-card" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--default-card" />
 </Canvas>
 
@@ -56,6 +58,8 @@ The height of the cards in a group all equalises by default.
 ### Default card with link or button
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--default-card-with-link" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--default-card-with-link" />
 </Canvas>
 
@@ -90,16 +94,19 @@ The height of the cards in a group all equalises by default.
 #### - Without image
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--default-card-no-image" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--default-card-no-image" />
 </Canvas>
 
 ```html
-
 ```
 
 #### - Without image, shaded
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--default-card-no-image-shaded" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--default-card-no-image-shaded" />
 </Canvas>
 
@@ -112,6 +119,8 @@ The height of the cards in a group all equalises by default.
 Button variants are restricted to purple and it's outline version.
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--default-card-no-image-button" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--default-card-no-image-button" />
 </Canvas>
 
@@ -130,31 +139,34 @@ Button variants are restricted to purple and it's outline version.
 #### - Without image, button, shaded
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--default-card-no-image-button-shaded" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--default-card-no-image-button-shaded" />
 </Canvas>
 
 ```html
-
 ```
 
 #### - With image
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--default-card-image" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--default-card-image" />
 </Canvas>
 
 ```html
-
 ```
 
 #### - With image, button
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--default-card-image-button" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--default-card-image-button" />
 </Canvas>
 
 ```html
-
 ```
 
 ## Variant examples
@@ -164,6 +176,8 @@ Button variants are restricted to purple and it's outline version.
 For story card, the sub-title is grey in colour, 16px, normal weight 400 and is placed above the card title.
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--story-card" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--story-card" />
 </Canvas>
 
@@ -197,6 +211,8 @@ For story card, the sub-title is grey in colour, 16px, normal weight 400 and is 
 For event card, the sub-title is purple-light in colour, 16px, medium weight 500 and is placed above the card title.
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--event-card" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--event-card" />
 </Canvas>
 
@@ -232,24 +248,32 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 #### - 1 col
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--default-card-1-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--default-card-1-col" />
 </Canvas>
 
 #### - 2 col
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--default-card-2-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--default-card-2-col" />
 </Canvas>
 
 #### - 3 col
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--default-card-3-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--default-card-3-col" />
 </Canvas>
 
 #### - 4 col
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--default-card-4-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--default-card-4-col" />
 </Canvas>
 
@@ -258,24 +282,32 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 #### - 1 col
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--story-card-1-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--story-card-1-col" />
 </Canvas>
 
 #### - 2 col
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--story-card-2-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--story-card-2-col" />
 </Canvas>
 
 #### - 3 col
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--story-card-3-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--story-card-3-col" />
 </Canvas>
 
 #### - 4 col
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--story-card-4-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--story-card-4-col" />
 </Canvas>
 
@@ -284,24 +316,32 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 #### - 1 col
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--event-card-1-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--event-card-1-col" />
 </Canvas>
 
 #### - 2 col
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--event-card-2-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--event-card-2-col" />
 </Canvas>
 
 #### - 3 col
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--event-card-3-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--event-card-3-col" />
 </Canvas>
 
 #### - 4 col
 
 <Canvas sourceState="hidden">
+  {/* <Story id="components-cards--event-card-4-col" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="components-cards--event-card-4-col" />
 </Canvas>
 
@@ -313,85 +353,109 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
       <th className="uqds-table__heading" width="20%">
         Viewport
       </th>
+
       <th className="uqds-table__heading" width="20%">
         Number of columns
       </th>
+
       <th className="uqds-table__heading" width="20%">
         Default card
       </th>
+
       <th className="uqds-table__heading" width="20%">
         Story card
       </th>
+
       <th className="uqds-table__heading" width="20%">
         Event card
       </th>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item" data-title="Viewport">
         Desktop
       </td>
+
       <td className="uqds-table__item" data-title="Number of columns">
         1 col
       </td>
+
       <td className="uqds-table__item" data-title="Default card">
         Align image & content: <br /> horizontal
       </td>
+
       <td className="uqds-table__item" data-title="Story card">
         Align image & content: <br /> horizontal
       </td>
+
       <td className="uqds-table__item" data-title="Event card">
         Align image & content: <br /> horizontal
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item" data-title="Viewport">
         Desktop
       </td>
+
       <td className="uqds-table__item" data-title="Number of columns">
         2,3,4 col
       </td>
+
       <td className="uqds-table__item" data-title="Default card">
         Align image & content: <br /> vertical
       </td>
+
       <td className="uqds-table__item" data-title="Story card">
         Align image & content: <br /> vertical
       </td>
+
       <td className="uqds-table__item" data-title="Event card">
         Align image & content: <br /> vertical
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item" data-title="Viewport">
         Mobile
       </td>
+
       <td className="uqds-table__item" data-title="Number of columns">
         1,2 col
       </td>
+
       <td className="uqds-table__item" data-title="Default card">
         Align image & content: <br /> vertical ~
       </td>
+
       <td className="uqds-table__item" data-title="Story card">
         Align image & content: <br /> vertical ~
       </td>
+
       <td className="uqds-table__item" data-title="Event card">
         Align image & content: <br /> vertical ~
       </td>
     </tr>
+
     <tr className="uqds-table__row">
       <td className="uqds-table__item" data-title="Viewport">
         Mobile
       </td>
+
       <td className="uqds-table__item" data-title="Number of columns">
         3,4 col
       </td>
+
       <td className="uqds-table__item" data-title="Default card">
         Align image & content: <br /> vertical ~
       </td>
+
       <td className="uqds-table__item" data-title="Story card">
-        Align image & content: <br /> list **
+        Align image & content: <br /> list \*\*
       </td>
+
       <td className="uqds-table__item" data-title="Event card">
-        Align image & content: <br /> list **
+        Align image & content: <br /> list \*\*
       </td>
     </tr>
   </tbody>
@@ -399,10 +463,10 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 
 ### Special rules
 
-~ On smaller viewports, image height is reduced to 190px for 1,2 column story/event cards and 1,2,3,4 column default cards. <br />
+\~ On smaller viewports, image height is reduced to 190px for 1,2 column story/event cards and 1,2,3,4 column default cards. <br />
 \*\* On smaller viewports, image height remain fixed at 98px for story/event cards.
 
 ## Accessibility
 
-- With keyboard accessibility, tabbing takes the user through the links in the card.
-- With assistive technologies like screen readers, it reads out the heading level, title, text and links in the card.
+*   With keyboard accessibility, tabbing takes the user through the links in the card.
+*   With assistive technologies like screen readers, it reads out the heading level, title, text and links in the card.
