--- a/packages/storybook-html/stories/components/core/space.mdx
+++ b/packages/storybook-html/stories/components/core/space.mdx
@@ -17,156 +17,212 @@ Use this basic spacing scale when building individual components. It includes sm
     <th>Name</th>
     <th>Example</th>
   </tr>
+
   <tr>
     <td>0</td>
     <td>0</td>
+
     <td>
       <code>$space-none</code>
     </td>
+
     <td>No space</td>
-    <td></td>
+
+    <td />
   </tr>
+
   <tr>
     <td>4</td>
     <td>0.25</td>
+
     <td>
       <code>$space-xs</code>
     </td>
+
     <td>Extra small</td>
+
     <td>
-      <div className="uqds-space uqds-space-xs"></div>
+      <div className="uqds-space uqds-space-xs" />
     </td>
   </tr>
+
   <tr>
     <td>8</td>
     <td>0.5</td>
+
     <td>
       <code>$space-s</code>
     </td>
+
     <td>Small</td>
+
     <td>
-      <div className="uqds-space uqds-space-sm"></div>
+      <div className="uqds-space uqds-space-sm" />
     </td>
   </tr>
+
   <tr>
     <td>16</td>
     <td>1</td>
+
     <td>
       <code>$space-m</code>
     </td>
+
     <td>Medium space</td>
+
     <td>
-      <div className="uqds-space"></div>
+      <div className="uqds-space" />
     </td>
   </tr>
+
   <tr>
     <td>24</td>
     <td>1.5</td>
+
     <td>
       <code>$space-l</code>
     </td>
+
     <td>Large</td>
+
     <td>
-      <div className="uqds-space uqds-space-lg"></div>
+      <div className="uqds-space uqds-space-lg" />
     </td>
   </tr>
+
   <tr>
     <td>32</td>
     <td>2</td>
+
     <td>
       <code>$space-xl</code>
     </td>
+
     <td>Extra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-xl"></div>
+      <div className="uqds-space uqds-space-xl" />
     </td>
   </tr>
+
   <tr>
     <td>40</td>
     <td>2.5</td>
+
     <td>
       <code>$space-xxl</code>
     </td>
+
     <td>2x extra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-xxl"></div>
+      <div className="uqds-space uqds-space-xxl" />
     </td>
   </tr>
+
   <tr>
     <td>48</td>
     <td>3</td>
+
     <td>
       <code>$space-xxxl</code>
     </td>
+
     <td>3x extra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-xxxl"></div>
+      <div className="uqds-space uqds-space-xxxl" />
     </td>
   </tr>
+
   <tr>
     <td>56</td>
     <td>3.5</td>
+
     <td>
       <code>$space-xxxxl</code>
     </td>
+
     <td>4x extra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-xxxxl"></div>
+      <div className="uqds-space uqds-space-xxxxl" />
     </td>
   </tr>
+
   <tr>
     <td>64</td>
     <td>4</td>
+
     <td>
       <code>$space-ul</code>
     </td>
+
     <td>Ultra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-ul"></div>
+      <div className="uqds-space uqds-space-ul" />
     </td>
   </tr>
+
   <tr>
     <td>72</td>
     <td>4.5</td>
+
     <td>
       <code>$space-uul</code>
     </td>
+
     <td>2x ultra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-uul"></div>
+      <div className="uqds-space uqds-space-uul" />
     </td>
   </tr>
+
   <tr>
     <td>80</td>
     <td>5</td>
+
     <td>
       <code>$space-uuul</code>
     </td>
+
     <td>3x ultra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-uuul"></div>
+      <div className="uqds-space uqds-space-uuul" />
     </td>
   </tr>
+
   <tr>
     <td>88</td>
     <td>5.5</td>
+
     <td>
       <code>$space-uuuul</code>
     </td>
+
     <td>4x ultra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-uuuul"></div>
+      <div className="uqds-space uqds-space-uuuul" />
     </td>
   </tr>
+
   <tr>
     <td>160</td>
     <td>10</td>
+
     <td>
       <code>$space-uuuuul</code>
     </td>
+
     <td>5x ultra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-uuuuul"></div>
+      <div className="uqds-space uqds-space-uuuuul" />
     </td>
   </tr>
 </table>
@@ -183,79 +239,107 @@ Use this layout scale for arranging components and other UI parts into a full pa
     <th>Name</th>
     <th>Example</th>
   </tr>
+
   <tr>
     <td>auto</td>
     <td>auto</td>
+
     <td>
       <code>$space-auto</code>
     </td>
+
     <td>auto</td>
-    <td></td>
+
+    <td />
   </tr>
+
   <tr>
     <td>16</td>
     <td>1</td>
+
     <td>
       <code>$space-m</code>
     </td>
+
     <td>Medium space</td>
+
     <td>
-      <div className="uqds-space"></div>
+      <div className="uqds-space" />
     </td>
   </tr>
+
   <tr>
     <td>24</td>
     <td>1.5</td>
+
     <td>
       <code>$space-l</code>
     </td>
+
     <td>Large space</td>
+
     <td>
-      <div className="uqds-space uqds-space-lg"></div>
+      <div className="uqds-space uqds-space-lg" />
     </td>
   </tr>
+
   <tr>
     <td>40</td>
     <td>2.5</td>
+
     <td>
       <code>$space-xxl</code>
     </td>
+
     <td>2x extra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-xxl"></div>
+      <div className="uqds-space uqds-space-xxl" />
     </td>
   </tr>
+
   <tr>
     <td>64</td>
     <td>4</td>
+
     <td>
       <code>$space-ul</code>
     </td>
+
     <td>Ultra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-ul"></div>
+      <div className="uqds-space uqds-space-ul" />
     </td>
   </tr>
+
   <tr>
     <td>80</td>
     <td>5</td>
+
     <td>
       <code>$space-uuul</code>
     </td>
+
     <td>3x ultra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-uuul"></div>
+      <div className="uqds-space uqds-space-uuul" />
     </td>
   </tr>
+
   <tr>
     <td>160</td>
     <td>10</td>
+
     <td>
       <code>$space-uuuuul</code>
     </td>
+
     <td>5x ultra large</td>
+
     <td>
-      <div className="uqds-space uqds-space-uuuuul"></div>
+      <div className="uqds-space uqds-space-uuuuul" />
     </td>
   </tr>
 </table>
@@ -268,8 +352,8 @@ Consideration should be given to how spacing is applied within components and th
 
 Applies padding to containers
 
-- For all user interface containers.
-- Apply padding on all sides.
+*   For all user interface containers.
+*   Apply padding on all sides.
 
 <table>
   <tr>
@@ -277,64 +361,81 @@ Applies padding to containers
     <th>Example</th>
     <th>Usage guide</th>
   </tr>
+
   <tr>
     <td>Container</td>
+
     <td>
       <div className="uqds-container uqds-container-space">
         <code>$space;</code>
       </div>
     </td>
+
     <td>
       <code>padding:$space;</code>
+
       <ul>
         <li>For all user interface containers.</li>
         <li>Apply padding equally on all sides.</li>
       </ul>
     </td>
   </tr>
+
   <tr>
     <td>Container size</td>
+
     <td>
       <div className="uqds-container uqds-container-space-lg">
         <code>$space-l;</code>
       </div>
     </td>
+
     <td>
       <code>padding:$space-l;</code>
+
       <ul>
         <li>adjust space using available space scale variables</li>
         <li>Space increments are used to control the density</li>
       </ul>
     </td>
   </tr>
+
   <tr>
     <td>Compressed</td>
+
     <td>
       <div className="uqds-container uqds-compressed-space-lg">
         <code>$space-compressed-l $space-l;</code>
       </div>
     </td>
+
     <td>
       <code>paddding:$space-compressed-l $space-l;</code>
+
       <ul>
         <li>Reduces the top and bottom padding</li>
         <li>Creates better spacing balance for cell-like containers</li>
         <li>Increases the density of grouped content</li>
+
         <li>
           Examples include, data tables, list group items, buttons and pills.
         </li>
       </ul>
     </td>
   </tr>
+
   <tr>
     <td>Stretched</td>
+
     <td>
       <div className="uqds-container uqds-stretched-space">
         <code>$space-stretched $space;</code>
       </div>
     </td>
+
     <td>
       <code>paddding:$space-stretched $space;</code>
+
       <ul>
         <li>increases the top and bottom padding</li>
         <li>Creates better spacing balance for long or stretched objects</li>
@@ -348,8 +449,8 @@ Applies padding to containers
 
 Stacks content vertically, applying top margin.
 
-- allows us to target the objects space through the css cascade, and the space to the next object.
-- use for all stacked content. So for example panels, form fields and anything else that is stacked vertically.
+*   allows us to target the objects space through the css cascade, and the space to the next object.
+*   use for all stacked content. So for example panels, form fields and anything else that is stacked vertically.
 
 <table>
   <tr>
@@ -357,77 +458,98 @@ Stacks content vertically, applying top margin.
     <th>Example</th>
     <th>Usage guide</th>
   </tr>
+
   <tr>
     <td>Stacked</td>
+
     <td>
       <div className="uqds-container">
         <div className="uqds-stacked-space">
           <code>$space;</code>
         </div>
+
         <div className="uqds-stacked-space">
           <code>$space;</code>
         </div>
+
         <div className="uqds-stacked-space">
           <code>$space;</code>
         </div>
+
         <div className="uqds-stacked-space">
           <code>$space;</code>
         </div>
       </div>
     </td>
+
     <td>
       <code>padding:$space;</code>
+
       <ul>
         <li>For all content when vertically stacking</li>
         <li>Apply top margin to content</li>
       </ul>
     </td>
   </tr>
+
   <tr>
     <td>Stacked extra small</td>
+
     <td>
       <div className="uqds-container">
         <div className="uqds-stacked-space-xs">
           <code>$space-xs;</code>
         </div>
+
         <div className="uqds-stacked-space-xs">
           <code>$space-xs;</code>
         </div>
+
         <div className="uqds-stacked-space-xs">
           <code>$space-xs;</code>
         </div>
+
         <div className="uqds-stacked-space-xs">
           <code>$space-xs;</code>
         </div>
       </div>
     </td>
+
     <td>
       <code>padding:$space-xs;</code>
+
       <ul>
         <li>Increases the density of stacked content</li>
       </ul>
     </td>
   </tr>
+
   <tr>
     <td>Stacked large</td>
+
     <td>
       <div className="uqds-container">
         <div className="uqds-stacked-space-lg">
           <code>$space-l;</code>
         </div>
+
         <div className="uqds-stacked-space-lg">
           <code>$space-l;</code>
         </div>
+
         <div className="uqds-stacked-space-lg">
           <code>$space-l;</code>
         </div>
+
         <div className="uqds-stacked-space-lg">
           <code>$space-l;</code>
         </div>
       </div>
     </td>
+
     <td>
       <code>padding:$space-xs;</code>
+
       <ul>
         <li>decreases the density of stacked content</li>
       </ul>
@@ -439,7 +561,7 @@ Stacks content vertically, applying top margin.
 
 Arrange objects inline horizontally, applying right margin.
 
-- wrapping as they flow like text from the left or right.
+*   wrapping as they flow like text from the left or right.
 
 <table>
   <tr>
@@ -447,77 +569,98 @@ Arrange objects inline horizontally, applying right margin.
     <th>Example</th>
     <th>Usage guide</th>
   </tr>
+
   <tr>
     <td>Inline</td>
+
     <td>
       <div className="uqds-container">
         <div className="uqds-inline-space">
           <code>$space;</code>
         </div>
+
         <div className="uqds-inline-space">
           <code>$space;</code>
         </div>
+
         <div className="uqds-inline-space">
           <code>$space;</code>
         </div>
+
         <div className="uqds-inline-space">
           <code>$space;</code>
         </div>
       </div>
     </td>
+
     <td>
       <code>padding:$space;</code>
+
       <ul>
         <li>For all content when spacing inline horizontally</li>
         <li>Apply right margin to content</li>
       </ul>
     </td>
   </tr>
+
   <tr>
     <td>Inline extra small</td>
+
     <td>
       <div className="uqds-container">
         <div className="uqds-inline-space-xs">
           <code>$space-xs;</code>
         </div>
+
         <div className="uqds-inline-space-xs">
           <code>$space-xs;</code>
         </div>
+
         <div className="uqds-inline-space-xs">
           <code>$space-xs;</code>
         </div>
+
         <div className="uqds-inline-space-xs">
           <code>$space-xs;</code>
         </div>
       </div>
     </td>
+
     <td>
       <code>padding:$space-xs;</code>
+
       <ul>
         <li>Increases the density of inline content</li>
       </ul>
     </td>
   </tr>
+
   <tr>
     <td>Inline large</td>
+
     <td>
       <div className="uqds-container">
         <div className="uqds-inline-space-lg">
           <code>$space-l;</code>
         </div>
+
         <div className="uqds-inline-space-lg">
           <code>$space-l;</code>
         </div>
+
         <div className="uqds-inline-space-lg">
           <code>$space-l;</code>
         </div>
+
         <div className="uqds-inline-space-lg">
           <code>$space-l;</code>
         </div>
       </div>
     </td>
+
     <td>
       <code>padding:$space-xs;</code>
+
       <ul>
         <li>decreases the density of inline content</li>
       </ul>
