--- a/packages/storybook-html/stories/components/footer-legacy/footer.mdx
+++ b/packages/storybook-html/stories/components/footer-legacy/footer.mdx
@@ -1,9 +1,13 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as FooterStories from './footer.stories';
+
+<Meta of={FooterStories} />
 
 # Global footer
 
 <StatusBadge.Deprecated />
+
 <StatusBadge.DraftDoc />
 
 ## Overview
@@ -13,6 +17,8 @@ The global footer provides a consistent branding and navigational element across
 ## Default example
 
 <Canvas sourceState="hidden" withToolbar>
+  {/* <Story height={339} id="legacy-footer--footer" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story height={339} id="legacy-footer--footer" />
 </Canvas>
 
