--- a/packages/storybook-html/stories/components/grid/grid.mdx
+++ b/packages/storybook-html/stories/components/grid/grid.mdx
@@ -1,24 +1,30 @@
 import { Meta, Story } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as GridStories from './grid.stories';
+
+<Meta of={GridStories} />
 
 # Grid
 
 <StatusBadge.Stable />
+
 <StatusBadge.StableDoc />
 
 ## Overview
 
-Layouts using our grid are achieved using a combination of `.uq-grid` (_grid
-container_) and `.uq-grid__col` (_grid column_) elements and their modifiers.
+Layouts using our grid are achieved using a combination of `.uq-grid` (*grid
+container*) and `.uq-grid__col` (*grid column*) elements and their modifiers.
 
 > ⚠️ Important: **grid containers should be afforded the entire width of the
-> viewport** (naturally, this doesn't apply to _nested_ and _full-width_ grids).
+> viewport** (naturally, this doesn't apply to *nested* and *full-width* grids).
 
 ## Golden
 
-This grid gives you a _main_ content column and a _sidebar_ column that stack
-for mobile. Under the hood, is our _6-8-12_ grid so you can keep your content
+This grid gives you a *main* content column and a *sidebar* column that stack
+for mobile. Under the hood, is our *6-8-12* grid so you can keep your content
 consistently aligned with the base grid.
+
+{/* <Story height="160" id="layout-grid--golden" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story height="160" id="layout-grid--golden" />
 
@@ -41,7 +47,9 @@ See what happens when you add more columns to the same container!
 
 ## Halves
 
-Behaves like _Golden_ but has two columns of equal size at larger screen sizes.
+Behaves like *Golden* but has two columns of equal size at larger screen sizes.
+
+{/* <Story height={85} id="layout-grid--halves" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story height={85} id="layout-grid--halves" />
 
@@ -56,8 +64,10 @@ Behaves like _Golden_ but has two columns of equal size at larger screen sizes.
 
 ## Thirds
 
-Behaves like _Golden_ but has three columns of equal size at larger screen
+Behaves like *Golden* but has three columns of equal size at larger screen
 sizes.
+
+{/* <Story height={85} id="layout-grid--thirds" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story height={85} id="layout-grid--thirds" />
 
@@ -73,7 +83,9 @@ sizes.
 
 ## Quarters
 
-Behaves like _Golden_ but has four columns of equal size at larger screen sizes.
+Behaves like *Golden* but has four columns of equal size at larger screen sizes.
+
+{/* <Story height={85} id="layout-grid--quarters" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story height={85} id="layout-grid--quarters" />
 
@@ -90,10 +102,12 @@ Behaves like _Golden_ but has four columns of equal size at larger screen sizes.
 
 ## Flexible grid
 
-The flexible grid leverages the power of [_CSS Grid Layout_](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout)
+The flexible grid leverages the power of [*CSS Grid Layout*](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout)
 to give you a quick & flexible layout solution. You can use this grid to
 organise your content into columns that stack when browser sizes are smaller.
 Therefore, it makes it an ideal solution for arranging linear material.
+
+{/* <Story height={175} id="layout-grid--flexible-1" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story height={175} id="layout-grid--flexible-1" />
 
@@ -111,6 +125,8 @@ modifier) like the following.
 </div>
 ```
 
+{/* <Story height={85} id="layout-grid--flexible-2" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story height={85} id="layout-grid--flexible-2" />
 
 Pay attention to what the grid does when the screens get very small.
@@ -119,12 +135,12 @@ Pay attention to what the grid does when the screens get very small.
 
 If you're looking for more control over your layout, we've built a grid that
 adapts the number of available columns to different screen sizes. It's a 6-, 8-,
-and 12-column grid built into one CSS class system! Starting from _mobile_, the
-_column-span_ classes give you the freedom to craft layouts to suit different
+and 12-column grid built into one CSS class system! Starting from *mobile*, the
+*column-span* classes give you the freedom to craft layouts to suit different
 screen sizes.
 
 > By default, we add the [specified margins](?path=/docs/layout-layout--base-layout-grid-visualised#specifications-per-breakpoint)
-> to both sides of the column row _and_ apply a max-width on XL screens on the
+> to both sides of the column row *and* apply a max-width on XL screens on the
 > root `.uq-grid` node.
 
 ### Basic how-to
@@ -143,6 +159,8 @@ screen sizes.
   </div>
 </div>
 ```
+
+{/* <Story height={200} id="layout-grid--twelve-eight-six-example-1" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story height={200} id="layout-grid--twelve-eight-six-example-1" />
 
@@ -170,29 +188,37 @@ layout with the grid:
 The difference between this example and the one before is that the two columns
 take up the whole available width for the smallest screens.
 
+{/* <Story height={200} id="layout-grid--twelve-eight-six-example-2" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story height={200} id="layout-grid--twelve-eight-six-example-2" />
 
-### The 6-column grid column-span classes (designed for _mobile_ displays)
+### The 6-column grid column-span classes (designed for *mobile* displays)
 
 Create layouts for the smallest screens.
 
 `uq-grid__col--[1—6]`, e.g. `<div class="uq-grid__col uq-grid__col--4">...</div>`
 
+{/* <Story height={265} id="layout-grid--twelve-eight-six-mobile" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story height={265} id="layout-grid--twelve-eight-six-mobile" />
 
-### The 8-column grid column-span classes (designed for _tablet_ displays)
+### The 8-column grid column-span classes (designed for *tablet* displays)
 
 Shift the layout for larger screens.
 
 `uq-grid__col--md-[1—8]`, e.g. `<div class="uq-grid__col uq-grid__col--4 uq-grid__col--md-6">...</div>`
 
+{/* <Story height={305} id="layout-grid--twelve-eight-six-tablet" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story height={305} id="layout-grid--twelve-eight-six-tablet" />
 
-### The 12-column grid column-span classes (designed for _desktop/laptop_ displays)
+### The 12-column grid column-span classes (designed for *desktop/laptop* displays)
 
 Shift the layout for the largest screens.
 
 `uq-grid__col--xl-[1—12]`, e.g. `<div class="uq-grid__col uq-grid__col--4 uq-grid__col--md-6 uq-grid__col--xl-8">...</div>`
+
+{/* <Story height={430} id="layout-grid--twelve-eight-six-desktop" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story height={430} id="layout-grid--twelve-eight-six-desktop" />
 
@@ -201,6 +227,8 @@ Shift the layout for the largest screens.
 You can nest grids, i.e. place another grid container within a grid column, to
 create nested layouts. However, columns can become too narrow if you nest too
 deeply or use small column spans.
+
+{/* <Story height={125} id="layout-grid--twelve-eight-six-nested" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story height={125} id="layout-grid--twelve-eight-six-nested" />
 
@@ -240,6 +268,8 @@ still followed.
 </div>
 ```
 
+{/* <Story height={85} id="layout-grid--twelve-eight-six-full-width" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story height={85} id="layout-grid--twelve-eight-six-full-width" />
 
 #### Example: flexible grid
@@ -256,6 +286,8 @@ still followed.
   </div>
 </div>
 ```
+
+{/* <Story height={145} id="layout-grid--flexible-full-width" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story height={145} id="layout-grid--flexible-full-width" />
 
@@ -276,11 +308,13 @@ container (`.uq-grid`) and a full length grid column (`.uq-grid__col`).
 </div>
 ```
 
+{/* <Story height={85} id="layout-grid--layout-container" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story height={85} id="layout-grid--layout-container" />
 
 ## SASS mixins
 
-The `@uqds/grid` package provides [_mixins_](https://sass-lang.com/documentation/at-rules/mixin)
+The `@uqds/grid` package provides [*mixins*](https://sass-lang.com/documentation/at-rules/mixin)
 to help you develop your own CSS rules using Sass such that they align with our
 layout system.
 
