--- a/packages/storybook-html/stories/components/header/header.mdx
+++ b/packages/storybook-html/stories/components/header/header.mdx
@@ -1,9 +1,13 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as HeaderStories from './header.stories';
+
+<Meta of={HeaderStories} />
 
 # Global header
 
 <StatusBadge.Stable />
+
 <StatusBadge.Stable />
 
 ## Overview
@@ -17,11 +21,13 @@ It also provides a consistent information architecture (navigation structure) fo
 
 The interim header is suitable for a broad range of sites and applications, it includes the following sections:
 
-- The primary section includes the UQ logo, Primary navigation (Study, Research, Partners and community, about) and search using [_UQ Search_](https://www.uq.edu.au/search).
-- The secondary section provides navigation to UQ home, News, Events, Give and contact.
-- An optional third navigation section is available on mobile when paired with the [Site header component](?path=/docs/components-site-header--site-header-with-subnav), which provides site title and local navigation options. This combines to provide a stacked mobile menu of all three sections (Local, primary and secondary navigation).
+*   The primary section includes the UQ logo, Primary navigation (Study, Research, Partners and community, about) and search using [*UQ Search*](https://www.uq.edu.au/search).
+*   The secondary section provides navigation to UQ home, News, Events, Give and contact.
+*   An optional third navigation section is available on mobile when paired with the [Site header component](?path=/docs/components-site-header--site-header-with-subnav), which provides site title and local navigation options. This combines to provide a stacked mobile menu of all three sections (Local, primary and secondary navigation).
 
 <Canvas withToolbar>
+  {/* <Story height={220} id="components-header--header-interim" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story height={220} id="components-header--header-interim" />
 </Canvas>
 
@@ -29,10 +35,12 @@ The interim header is suitable for a broad range of sites and applications, it i
 
 Currently reserved for the UQ Homepage and level one landing pages for Study, Research, Partners & community and about.
 
-- The primary section includes the UQ logo, Primary navigation (Study, Research, Partners and community, about) with an extended drop down information architecture (mega menu) and search using [_UQ Search_](https://www.uq.edu.au/search).
-- The secondary section provides navigation to UQ home, News, Events, Give and contact.
+*   The primary section includes the UQ logo, Primary navigation (Study, Research, Partners and community, about) with an extended drop down information architecture (mega menu) and search using [*UQ Search*](https://www.uq.edu.au/search).
+*   The secondary section provides navigation to UQ home, News, Events, Give and contact.
 
 <Canvas withToolbar>
+  {/* <Story height={300} id="components-header--header" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story height={300} id="components-header--header" />
 </Canvas>
 
@@ -60,15 +68,19 @@ appHeight();
 When implementation of the full header is not possible, a simplified approach using basic elements may be appropriate.
 UQ purple background combined with the UQ logo make up the most important elements of the header.
 
+{/* <Story height={120} id="components-header--basic-header" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
 <Story height={120} id="components-header--basic-header" />
 
 ### Default search
 
-The default option is a global search of all UQ. The search feature sends users to results on [_UQ Search_](https://www.uq.edu.au/search).
+The default option is a global search of all UQ. The search feature sends users to results on [*UQ Search*](https://www.uq.edu.au/search).
 
 > Don't reappropriate the search function for special integrated search
 > functionality within your application e.g. searching for a location on a map,
 > searching for books or articles in a library database.
+
+{/* <Story id="components-header--search-global" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story id="components-header--search-global" />
 
@@ -77,6 +89,8 @@ The default option is a global search of all UQ. The search feature sends users 
 You can optionally provide two radio fields, allowing users to choose to search all UQ sites or just the content on your site.
 
 > \*If your application/website isn't indexed by UQ Search, it may impact what results are provided by a restricted search.
+
+{/* <Story height={120} id="components-header--search-local" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
 
 <Story height={120} id="components-header--search-local" />
 
@@ -116,7 +130,7 @@ Optionally pair with the [Site header component](?path=/docs/components-site-hea
 
 Software as a service (SaaS) applications and templates supplied by third party solutions may make implementation of the header difficult.
 
-We recommend simplifying the header to basic elements [_Header simplified_](?path=/docs/components-header--basic-header).
+We recommend simplifying the header to basic elements [*Header simplified*](?path=/docs/components-header--basic-header).
 
 ## Accessibility
 
@@ -128,4 +142,4 @@ Every navigation `<nav>` includes an aria label, for example:
 
 ## Related
 
-- [Site header](?path=/docs/components-site-header--site-header-with-subnav)
+*   [Site header](?path=/docs/components-site-header--site-header-with-subnav)
