--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-1-live-data-indicator.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-1-live-data-indicator.mdx
@@ -1,5 +1,8 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as UqMaps1LiveDataIndicatorStories from './uq-maps-1-live-data-indicator.stories';
+
+<Meta of={UqMaps1LiveDataIndicatorStories} />
 
 # UQ Maps: live data indicator
 
@@ -8,11 +11,15 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 ## Default
 
 <Canvas withSource="open">
+  {/* <Story id="deliverables-uq-maps-1-live-data-indicator--live-data-indicator" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="deliverables-uq-maps-1-live-data-indicator--live-data-indicator" />
 </Canvas>
 
 ## Preset color variants
 
 <Canvas withSource="open">
+  {/* <Story id="deliverables-uq-maps-1-live-data-indicator--live-data-indicator-variants" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story id="deliverables-uq-maps-1-live-data-indicator--live-data-indicator-variants" />
 </Canvas>
