--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-6-app-info.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-6-app-info.mdx
@@ -1,11 +1,14 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as UqMaps6AppInfoStories from './uq-maps-6-app-info.stories';
+
+<Meta of={UqMaps6AppInfoStories} />
 
 # UQ Maps: app info drawer
 
 <StatusBadge.Development />
 
-Implements the _slide drawer_ and _badge_ to display app info.
+Implements the *slide drawer* and *badge* to display app info.
 
 ## Mobile
 
@@ -14,6 +17,8 @@ Implements the _slide drawer_ and _badge_ to display app info.
 #### Basic usage
 
 <Canvas withSource="open" withToolbar>
+  {/* <Story height={400} id="deliverables-uq-maps-6-app-info-drawer--closed" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story height={400} id="deliverables-uq-maps-6-app-info-drawer--closed" />
 </Canvas>
 
@@ -22,5 +27,7 @@ Implements the _slide drawer_ and _badge_ to display app info.
 #### Basic usage
 
 <Canvas withSource="open" withToolbar>
+  {/* <Story height={400} id="deliverables-uq-maps-6-app-info-drawer--open" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story height={400} id="deliverables-uq-maps-6-app-info-drawer--open" />
 </Canvas>
