--- a/packages/storybook-html/stories/patterns/form-validation/form-validation.mdx
+++ b/packages/storybook-html/stories/patterns/form-validation/form-validation.mdx
@@ -4,11 +4,9 @@ import baddestForm from "./form-errors-kitchen-sink.html";
 import passwordResetHTML from "./examples/password-reset.html";
 import passwordResetInit from "./examples/password-reset.es6";
 import "./examples/password-reset.scss";
+import * as FormValidationStories from './form-validation.stories';
 
-<Meta
-  title="Patterns/Form validation"
-  parameters={{ previewTabs: { canvas: { hidden: false } } }}
-/>
+<Meta of={FormValidationStories} />
 
 # Form validation
 
@@ -22,18 +20,18 @@ validation.
 
 ## Recommendations
 
-### Include both an error summary _and_ inline validation messages
+### Include both an error summary *and* inline validation messages
 
-Display an error summary _above/before_ the form when the user submits the form
-(_on submit_).
+Display an error summary *above/before* the form when the user submits the form
+(*on submit*).
 
 export const BadFormExample = () => {
   return baddestForm;
 };
 
-<Story name="Empty form submit example">{BadFormExample.bind({})}</Story>
+<Story of={FormValidationStories.EmptyFormSubmitExample} />
 
----
+***
 
 ### Validation messages must be highly visible
 
@@ -48,7 +46,7 @@ messages should be boldly distinguishable by ensuring enough contrast with
 surrounding elements. Please make appropriate use of our form error styles to
 comply to this requirement.
 
----
+***
 
 ### Validation messages must be accessible in a range of contexts
 
@@ -56,21 +54,26 @@ Expected screen reader behaviour:
 
 <dl>
   <dt>Error summaries</dt>
+
   <dd>
     Error summaries are read out loud, urgently, and disruptively, after the
     user tries to submit an invalid form.
   </dd>
+
   <dt>Inline error messages</dt>
+
   <dd>
     Individual errors messages are read out loud <i>on blur</i> but
     non-disruptively.
+
     <br />
+
     Individual error messages are read out loud <i>on focus</i> on the
     corresponding input.
   </dd>
 </dl>
 
----
+***
 
 ### Validation messages must be easily understood and actioned
 
@@ -80,38 +83,38 @@ the specific issue.
 | ✅ Use clear actionable messages                                                         | ⛔️ Avoid generic or vague messages |
 | ---------------------------------------------------------------------------------------- | ----------------------------------- |
 | Enter your first name                                                                    | This field is required              |
-| Enter a valid Australian mobile number.<br/>For example, +61 4 XXXX XXXX or 04XX XXX XXX | Enter a valid mobile number         |
+| Enter a valid Australian mobile number.<br />For example, +61 4 XXXX XXXX or 04XX XXX XXX | Enter a valid mobile number         |
 
----
+***
 
 ### Validate forms on the client-side wherever possible
 
 [Research](https://alistapart.com/article/inline-validation-in-web-forms/) had
 found that "participants were faster, more successful, less error-prone, and
 more satisfied when they used the forms with inline validation" (Wroblewski,
-2009).
+2009\).
 
 Fallback to server-side validation where the validation method requires complex
 calculations or business logic not available, practical, or secure in the
 front-end.
 
----
+***
 
-### By default, show inline validation messages _after_ the user completes a field
+### By default, show inline validation messages *after* the user completes a field
 
-By default, the validation message should be shown _after_ the user finishes
-with the input, i.e. _on blur_. Sometimes the user experience will be improved
-by showing validation feedback _while_ the user is completing the field. Use the
+By default, the validation message should be shown *after* the user finishes
+with the input, i.e. *on blur*. Sometimes the user experience will be improved
+by showing validation feedback *while* the user is completing the field. Use the
 following table as a guide.
 
 | Timing | What it means                                                                                                                                                         | When to use it                                                                                                                                                                                                     |
 | ------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| After  | We display an inline validation message _after_ the user has indicated that they are done answering a question (by moving on to the next one; on _blur_ or _change_). | By default. For open-ended questions/fields.                                                                                                                                                                       |
-| While  | In this variation, we display an (updated) inline validation message _while_ the user answers a question (_on input_).                                                | When a valid answer may not be immediately clear to the user. When there are complex requirements the user needs to meet in the field, e.g. password complexity requirements, selecting exactly three options etc. |
+| After  | We display an inline validation message *after* the user has indicated that they are done answering a question (by moving on to the next one; on *blur* or *change*). | By default. For open-ended questions/fields.                                                                                                                                                                       |
+| While  | In this variation, we display an (updated) inline validation message *while* the user answers a question (*on input*).                                                | When a valid answer may not be immediately clear to the user. When there are complex requirements the user needs to meet in the field, e.g. password complexity requirements, selecting exactly three options etc. |
 
 #### Advice on scaled or binary feedback messages while the user is typing
 
-When validating on _input_ (while the user is typing), we are generally doing so
+When validating on *input* (while the user is typing), we are generally doing so
 to give guidance during field completion. For brevity, we will identify two
 different types of instantaneously feedback types and usage examples.
 
@@ -130,24 +133,20 @@ export const PasswordForm = () => {
 };
 
 <Canvas sourceState="hidden" withToolbar>
-  <Story
-    name="Password form"
-    inline={false}
-    height={600}
-    parameters={{ layout: "padded" }}
-  >
-    {PasswordForm.bind({})}
-  </Story>
+  <Story of={FormValidationStories.PasswordForm_} />
 </Canvas>
 
 ## Glossary
 
 <dl>
   <dt>Form validation messages</dt>
+
   <dd>
     Intersection of <i>error summary</i> and <i>inline validation messages</i>.
   </dd>
+
   <dt>Inline validation messages</dt>
+
   <dd>
     Error messages, success messages, or feedback messages displayed within a
     form context.
@@ -169,8 +168,8 @@ should be used to trigger validation functions.
 
 ## Related
 
-- [Form controls](/?path=/docs/components-form-controls--input-text)
-- [Error summary](/?path=/docs/components-form-error-summary--error-summary)
+*   [Form controls](/?path=/docs/components-form-controls--input-text)
+*   [Error summary](/?path=/docs/components-form-error-summary--error-summary)
 
 ### Form submission failure due to server-side or policy errors
 
