--- a/packages/storybook-html/stories/patterns/header-footer/basic-page.mdx
+++ b/packages/storybook-html/stories/patterns/header-footer/basic-page.mdx
@@ -1,10 +1,15 @@
 import { Meta, Story, Canvas } from '@storybook/blocks';
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
+import * as BasicPageStories from './basic-page.stories';
+
+<Meta of={BasicPageStories} />
 
 # Basic page
 
 <StatusBadge.DraftDoc />
 
 <Canvas sourceState="hidden" withToolbar>
+  {/* <Story height={1080} id="patterns-basic-page--basic-page" /> is deprecated, please migrate it to <Story of={referenceToStory} /> see: https://storybook.js.org/migration-guides/7.0 */}
+
   <Story height={1080} id="patterns-basic-page--basic-page" />
 </Canvas>
